platform/ingress/kubeflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeflow
  namespace: istio-system
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - kubeflow.initio.cc
      secretName: initio-cc-tls
  rules:
    - host: kubeflow.initio.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
